--- a/Frontend/src/Chat.css
+++ b/Frontend/src/Chat.css
@@ -1,13 +1,13 @@
 .chats {
     width: 100%;
     max-width: 800px;
-    height: 100%;
+    flex-grow: 1;
+    min-height: 0;
     overflow-y: auto;
     padding: 24px 24px 100px 24px;
     display: flex;
     flex-direction: column;
     gap: 24px;
-    flex-grow: 1;
 }
 
 /* Scrollbar adjustment */
